<resources>
    <string name="app_name">Inventory App</string>
    <!-- Title text for the empty view [CHAR LIMIT=50] -->
    <string name="empty_view_title_text">No products here...</string>

    <!-- Subtitle text for the empty view that prompts the user to add a product [CHAR LIMIT=50] -->
    <string name="empty_view_subtitle_text">Get started by adding a product</string>

    <!-- Title for the activity to add a new product [CHAR LIMIT=20] -->
    <string name="editor_activity_title_new_product">Add a Product</string>

    <!-- Title for the activity to edit an existing product [CHAR LIMIT=20] -->
    <string name="editor_activity_title_edit_product">Edit Product</string>

    <!-- Validation toasts for editing the products [CHAR LIMIT=20] -->
    <string name="validation_msg_product_name">Please add product name</string>
    <string name="validation_msg_product_price">Please add product price</string>
    <string name="validation_msg_product_quantity">Please add product quantity</string>

    <!-- Label for product category of attributes in the editor [CHAR LIMIT=30] -->
    <string name="category_product">Product</string>

    <!-- Label for supplier category of attributes in the editor [CHAR LIMIT=30] -->
    <string name="category_supplier">Supplier</string>

    <!-- Text hint for product name field in the editor [CHAR LIMIT=30] -->
    <string name="hint_product_name">Name</string>

    <!-- Text hint for product price field in the editor -->
    <string name="hint_product_price">Price</string>

    <!-- Text hint for product quantity field in the editor -->
    <string name="hint_product_quantity">Quantity</string>

    <!-- Text hint for supplier name field in the editor [CHAR LIMIT=30] -->
    <string name="hint_supplier_name">Name</string>

    <!-- Text hint for supplier phone field in the editor [CHAR LIMIT=NONE] -->
    <string name="hint_supplier_phone">Phone</string>

    <!-- Toast message in editor when new product has been successfully inserted [CHAR LIMIT=NONE] -->
    <string name="editor_insert_product_successful">Product saved</string>

    <!-- Toast message in editor when new product has failed to be inserted [CHAR LIMIT=NONE] -->
    <string name="editor_insert_product_failed">Error with saving product</string>

    <!-- Toast message in editor when current product was successfully updated [CHAR LIMIT=NONE] -->
    <string name="editor_update_product_successful">Product updated</string>

    <!-- Toast message in editor when current product has failed to be updated [CHAR LIMIT=NONE] -->
    <string name="editor_update_product_failed">Error with updating product</string>

    <!-- Label for editor menu option to save product and leave editor [CHAR LIMIT=20] -->
    <string name="action_save">Save</string>

    <!-- Label for editor overflow menu option that buy the current product [CHAR LIMIT=20] -->
    <string name="action_buy">Order</string>

    <!-- Label for editor overflow menu option that deletes the current product [CHAR LIMIT=20] -->
    <string name="action_delete">Delete</string>

    <!-- Dialog message when user is leaving editor but hasn't saved changes [CHAR LIMIT=NONE] -->
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>

    <!-- Dialog button text for the option to discard a user's changes [CHAR LIMIT=20] -->
    <string name="discard">Discard</string>

    <!-- Dialog button text for the option to keep editing the current product [CHAR LIMIT=20] -->
    <string name="keep_editing">Keep Editing</string>

    <!-- Dialog message to ask the user to confirm deleting the current product [CHAR LIMIT=NONE] -->
    <string name="delete_dialog_msg">Delete this product?</string>

    <!-- Dialog button text for the option to confirm deleting the current product [CHAR LIMIT=20] -->
    <string name="delete">Delete</string>

    <!-- Dialog button text for the option to cancel deletion of the current product [CHAR LIMIT=20] -->
    <string name="cancel">Cancel</string>

    <!-- Toast message in editor when current product was successfully deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_product_successful">Product deleted</string>

    <!-- Toast message in editor when current product has failed to be deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_product_failed">Error with deleting product</string>

    <string name="text_minus_button">-</string>

    <string name="text_plus_button">+</string>

    <string name="text_select_image_button">Select Image</string>

    <string name="currency_symbol">€</string>

    <string name="unit_price">EURO</string>

    <string name="no_supplier_phone">Supplier Phone not registered</string>

    <string name="camera_permission_error">"Camera Permission error"</string>

    <string name="camera_permission_granted">"Camera Permission granted"</string>

    <string name="camera_permission_denied">"Camera Permission denied"</string>

    <string name="dialog_select_option">"Select Option"</string>

    <string name="dialog_take_photo">"Take Photo"</string>

    <string name="dialog_choose_gallery">"Choose From Gallery"</string>

    <string name="dialog_cancel">"Cancel"</string>

    <string name="run_out">This product is run out of stock</string>

    <!-- suppliers -->
    <string name="omron">Omron</string>
    <string name="wellmed">Wellmed</string>
    <string name="teva">Teva</string>

</resources>
